2006-10-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor
	-iCalStringTemplate]): start and due date are now optional.

	* UI/Scheduler/UIxTimeDateControl.m ([UIxTimeDateControl
	-setDayStartHour:aStartHour]):  added a new "isDisabled" ivar with
	appropriate accessors to be settable through the templates.

	* UI/Scheduler/UIxDatePicker.m ([UIxDatePicker -init]): added a
	new "isDisabled" ivar with appropriate accessors to be
	settable through the templates.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-availableCalendars]): new method that list the calendars to which
	the user has subscribed.
	([UIxComponentEditor -componentOwner]): returns the owner of the
	editted object.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromTodo:_task]): set the start and enddate of
	quickentries to null whenever each or all of them are null, by
	providing an impossible timestamp from with NSNotFound as value.

2006-10-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/UIxMailEditor.js: update the algorithm
	that handles the creation of new fields with the new APIs and the
	new node structure on the page.

	* UI/Scheduler/UIxAppointmentEditor.m,
	UI/Scheduler/UIxTaskEditor.m:
	refactored to user UIxComponentEditor as parent class.

	* UI/Scheduler/UIxComponentEditor.[hm]: new class module
	containing the methods common to the UIxTaskEditor and the
	UIxAppointmentEditor.

2006-10-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -doCalendarQuery:context]): now supports
	the handling of time-ranges.

	* UI/WebServerResources/ContactsUI.js: specify a notification type as
	parameters when onConfirmContactSelection in invoked.

	* UI/WebServerResources/generic.js: specify a notification type as
	parameters when onContactRemove in invoked.
